--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/hero-bg.jpg") top center;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
